--- a/style.css
+++ b/style.css
@@ -45,25 +45,21 @@ h1 {
     
 }
 
+/**Grid Color and Sizing**/
 
 .box-1 {
     background-color: darkturquoise;
-    
-    
+        
 }
 
 .box-2 {
     background-color: rgba(255, 251, 0, 0.39);
     
-   
-    
 }
 
 .box-3 {
     background-color: rgba(150, 8, 211, 0.548);
-    
-    
-    
+      
 }
 
 .box-4 {
